New Assets and Target Areas
Recently replaced some old assets with new ones. Updated SCSS code.

--- a/screen-home.html
+++ b/screen-home.html
@@ -60,19 +60,18 @@
                 </div>
                 <!-- Background Scene Only -->
                 <div id="background-scene">
-                    <div class="environment-dumpster environment-items"></div>
-                    <div class="environment-transhcan1 environment-items"></div>
-                    <div class="environment-transhcan2 environment-items"></div>
-                    <div class="environment-bag environment-items"></div>
-                    <div class="environment-manhole environment-items"></div>
-                    <div class="environment-cardboardBox environment-items"></div>
+                    <div class="environment-dumpster"></div>
+                    <div class="environment-transhcan1"></div>
+                    <div class="environment-transhcan2"></div>
+                    <div class="environment-bag"></div>
+                    <div class="environment-manhole"></div>
                 </div>
                 <!-- .hit-targets can be inactive or active for point collection -->
                 <div class="hit-targets inactive location-dumpster" name="dumpster-target">
                     <!-- tap the target and grab the value img with the 'on' class name -->
-                    <div class="img dog-type-l on" data-scoreVal="10"></div>
+                    <div class="img dog-type-l off" data-scoreVal="10"></div>
                     <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
+                    <div class="img cat-type-m on" data-scoreVal="100"></div>
                     <!-- <div class="img com-type-m off" data-scoreVal="1000"></div> -->
                 </div>
                 <div class="hit-targets inactive location-trashcan1" name="trashcan1-target">
@@ -97,12 +96,6 @@
                     <div class="img dog-type-l off" data-scoreVal="10"></div>
                     <div class="img dog-type-s on" data-scoreVal="50"></div>
                     <div class="img cat-type-m off" data-scoreVal="100"></div>
-                    <!-- <div class="img com-type-m off" data-scoreVal="1000"></div> -->
-                </div>
-                <div class="hit-targets inactive location-cardboardBox saved" name="cardboardBox-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m on" data-scoreVal="100"></div>
                     <!-- <div class="img com-type-m off" data-scoreVal="1000"></div> -->
                 </div>
             </div>
