--- a/README.html
+++ b/README.html
@@ -25,3 +25,33 @@
   <li>Koala (optional)</li>
 </ul>
 
+
+
+
+<hr/>
+
+
+
+
+<p>Requirements</p>
+
+
+<ul>
+    <li>Sound Object</li>
+    <li>CSS Animations
+        <ul>
+            <li>Make the pets pop up when children tags inside the hit-targets contains the classname "on"</li>
+        </ul>
+    </li>
+    <li>Timer Component
+        <ul>
+            <li>A timer that changes in duration depending on dog view-time. Small dogs and cats should appear for less time.</li>
+        </ul>
+    </li>
+    <li>Countdown to Begin Game
+        <ul>
+            <li>Style the PLAY SCREEN with a countdown as to when the game begins. 3, 2, 1, Go!!! (or even 'Kill')</li>
+        </ul>
+    </li>
+</ul>
+
