--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
         <div id="main-frame">
             <!-- MENU SCREEN -->
             
@@ -214,40 +213,40 @@
                 <!-- .hit-targets can be inactive or active for point collection -->
                 <div class="hit-targets inactive location-dumpster" name="dumpster-target">
                     <!-- tap the target and grab the value img with the 'on' class name -->
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
-                    <div class="img com-type-m off" data-scoreVal="1000" data-varComm="1"></div>
+                    <div class="img dog-type-l on" data-scoreVal="10"></div>
+                    <div class="img dog-type-s on" data-scoreVal="50"></div>
+                    <div class="img cat-type-m on" data-scoreVal="100"></div>
+                    <div class="img com-type-m on" data-scoreVal="1000" data-varComm="1"></div>
                 </div>
                 <div class="hit-targets inactive location-trashcan1" name="trashcan1-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
-                    <div class="img com-type-m off" data-scoreVal="1000" data-varComm="2"></div>
+                    <div class="img dog-type-l on" data-scoreVal="10"></div>
+                    <div class="img dog-type-s on" data-scoreVal="50"></div>
+                    <div class="img cat-type-m on" data-scoreVal="100"></div>
+                    <div class="img com-type-m on" data-scoreVal="1000" data-varComm="2"></div>
                 </div>
                 <div class="hit-targets inactive location-trashcan2" name="trashcan2-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
-                    <div class="img com-type-m off" data-scoreVal="1000" data-varComm="3"></div>
+                    <div class="img dog-type-l on" data-scoreVal="10"></div>
+                    <div class="img dog-type-s on" data-scoreVal="50"></div>
+                    <div class="img cat-type-m on" data-scoreVal="100"></div>
+                    <div class="img com-type-m on" data-scoreVal="1000" data-varComm="3"></div>
                 </div>
                 <div class="hit-targets inactive location-bag saved" name="bag-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
-                    <div class="img com-type-m off" data-scoreVal="1000" data-varComm="4"></div>
+                    <div class="img dog-type-l on" data-scoreVal="10"></div>
+                    <div class="img dog-type-s on" data-scoreVal="50"></div>
+                    <div class="img cat-type-m on" data-scoreVal="100"></div>
+                    <div class="img com-type-m on" data-scoreVal="1000" data-varComm="4"></div>
                 </div>
                 <div class="hit-targets inactive location-manhole save" name="manhole-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
-                    <div class="img com-type-m off" data-scoreVal="1000" data-varComm="5"></div>
+                    <div class="img dog-type-l on" data-scoreVal="10"></div>
+                    <div class="img dog-type-s on" data-scoreVal="50"></div>
+                    <div class="img cat-type-m on" data-scoreVal="100"></div>
+                    <div class="img com-type-m on" data-scoreVal="1000" data-varComm="5"></div>
                 </div>
                 <div class="hit-targets inactive location-cardboardBox saved" name="cardboardBox-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
-                    <div class="img com-type-m off" data-scoreVal="1000" data-varComm="6"></div>
+                    <div class="img dog-type-l on" data-scoreVal="10"></div>
+                    <div class="img dog-type-s on" data-scoreVal="50"></div>
+                    <div class="img cat-type-m on" data-scoreVal="100"></div>
+                    <div class="img com-type-m on" data-scoreVal="1000" data-varComm="6"></div>
                 </div>
             </div>
             
