putting game together

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- MENU SCREEN -->
             
             <!-- Add an 'active' class to show -->
-            <section class="frame start-screen">
+            <section class="frame start-screen active">
                <div class="headline-pic">
                     <img draggable="false" src="images/screens/titlepage-txt-whackem_all.png">
                 </div> 
@@ -175,7 +175,7 @@
             <!-- PLAY SCREEN -->
             
             <!-- Add an 'active' class to show -->
-            <div class="frame play-active active">
+            <div class="frame play-active">
                 <div id="screen-splash"></div>
                 <div id="screen-tutorial"></div>
                 <!-- Header Only -->
@@ -218,39 +218,44 @@
                 <!-- .hit-targets can be inactive or active for point collection -->
                 <div class="hit-targets inactive location-dumpster" name="dumpster-target">
                     <!-- tap the target and grab the value img with the 'on' class name -->
-                    <div class="img dog-type-l off" id="test" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
+                    <!-- old values
+                        dog-type-l  10
+                        dog-type-s  50
+                        cat-type-m  100
+                     -->
+                    <div class="img dog-type-l off" data-scoreVal="100"></div>
+                    <div class="img dog-type-s off" data-scoreVal="200"></div>
+                    <div class="img cat-type-m off" data-scoreVal="300"></div>
                     <div class="img com-type-m off" data-scoreVal="1000" data-varComm="1"></div>
                 </div>
                 <div class="hit-targets inactive location-trashcan1" name="trashcan1-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
+                    <div class="img dog-type-l off" data-scoreVal="100"></div>
+                    <div class="img dog-type-s off" data-scoreVal="200"></div>
+                    <div class="img cat-type-m off" data-scoreVal="300"></div>
                     <div class="img com-type-m off" data-scoreVal="1000" data-varComm="2"></div>
                 </div>
                 <div class="hit-targets inactive location-trashcan2" name="trashcan2-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
+                    <div class="img dog-type-l off" data-scoreVal="100"></div>
+                    <div class="img dog-type-s off" data-scoreVal="200"></div>
+                    <div class="img cat-type-m off" data-scoreVal="300"></div>
                     <div class="img com-type-m off" data-scoreVal="1000" data-varComm="3"></div>
                 </div>
                  <div class="hit-targets inactive location-bag" name="bag-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
+                    <div class="img dog-type-l off" data-scoreVal="100"></div>
+                    <div class="img dog-type-s off" data-scoreVal="200"></div>
+                    <div class="img cat-type-m off" data-scoreVal="300"></div>
                     <div class="img com-type-m off" data-scoreVal="1000" data-varComm="4"></div>
                 </div>
                 <div class="hit-targets inactive location-manhole" name="manhole-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
+                    <div class="img dog-type-l off" data-scoreVal="100"></div>
+                    <div class="img dog-type-s off" data-scoreVal="200"></div>
+                    <div class="img cat-type-m off" data-scoreVal="300"></div>
                     <div class="img com-type-m off" data-scoreVal="1000" data-varComm="5"></div>
                 </div>
                 <div class="hit-targets inactive location-cardboardBox" name="cardboardBox-target">
-                    <div class="img dog-type-l off" data-scoreVal="10"></div>
-                    <div class="img dog-type-s off" data-scoreVal="50"></div>
-                    <div class="img cat-type-m off" data-scoreVal="100"></div>
+                    <div class="img dog-type-l off" data-scoreVal="100"></div>
+                    <div class="img dog-type-s off" data-scoreVal="200"></div>
+                    <div class="img cat-type-m off" data-scoreVal="300"></div>
                     <div class="img com-type-m off" data-scoreVal="1000" data-varComm="6"></div>
                 </div>
                 <!--<div class="hit-targets inactive location-bag saved" name="bag-target">
@@ -278,7 +283,7 @@
                 <div class="headline">
                     Congratulations! You’ve killed
                 </div>
-                <div class="score">
+                <div class="score" id="scoreEndKill">
                     XXX
                 </div>
                <div class="subheadline">
@@ -297,7 +302,7 @@
                 <div class="headline">
                     Congratulations! You’ve saved
                 </div>
-                <div class="score">
+                <div class="score" id="scoreEndSave">
                     XXX
                 </div>
                <div class="subheadline">
