--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" href="css/normalize.min.css">
         <link rel="stylesheet" type="text/css" href="css/main.min.css">
         <link rel="stylesheet" type="text/css" href="css/custom.css">
+        <link rel="stylesheet" type="text/css" href="css/font-awesome-4.2.0/css/font-awesome.min.css">
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -240,7 +241,7 @@
                     <div class="img cat-type-m off" data-scoreVal="300"></div>
                     <div class="img com-type-m off" data-scoreVal="1000" data-varComm="3"></div>
                 </div>
-                 <div class="hit-targets inactive location-bag" name="bag-target">
+                <div class="hit-targets inactive location-bag" name="bag-target">
                     <div class="img dog-type-l off" data-scoreVal="100"></div>
                     <div class="img dog-type-s off" data-scoreVal="200"></div>
                     <div class="img cat-type-m off" data-scoreVal="300"></div>
@@ -284,7 +285,7 @@
                     Congratulations! You’ve killed
                 </div>
                 <div class="score" id="scoreEndKill">
-                    XXX
+                    0
                 </div>
                <div class="subheadline">
                    INNOCENT PETS!
@@ -303,7 +304,7 @@
                     Congratulations! You’ve saved
                 </div>
                 <div class="score" id="scoreEndSave">
-                    XXX
+                    0
                 </div>
                <div class="subheadline">
                    INNOCENT PETS!
@@ -340,6 +341,10 @@
         <script src="js/plugins.js"></script>
         <script src="js/counter.js"></script>
         <script src="js/sounds.js"></script>
+        <!--<script src="js/gobalFunctions.js"></script>
+        <script src="js/pet.js"></script>
+        <script src="js/dumpster.js"></script>
+        <script src="js/game.js"></script>-->
         <script src="js/main.js"></script>
 
 
