scissor and shovel

--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
                 <div class="hit-targets location-manhole" name="manhole-target"></div>
                 <div class="hit-targets location-cardboardBox" name="cardboardBox-target"></div>
 
-                <img src="images/coin-sg.png" class="location-dumpster img hit-type off"/>
-                <img src="images/coin-sg.png" class="location-trashcan1 img hit-type off"/>
-                <img src="images/coin-sg.png" class="location-trashcan2 img hit-type off"/>
-                <img src="images/coin-sg.png" class="location-bag img hit-type off"/>
-                <img src="images/coin-sg.png" class="location-manhole img hit-type off"/>
-                <img src="images/coin-sg.png" class="location-cardboardBox img hit-type off"/>
+                <div class="location-dumpster img hit-type off"></div>
+                <div class="location-trashcan1 img hit-type off"></div>
+                <div class="location-trashcan2 img hit-type off"></div>
+                <div class="location-bag img hit-type off"></div>
+                <div class="location-manhole img hit-type off"></div>
+                <div class="location-cardboardBox img hit-type off"></div>
 
             </div>
             
