--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <script type="text/javascript" src="js/vendor/jquery.plugin.js"></script> 
         <script type="text/javascript" src="js/vendor/preloadjs-0.4.1.min.js"></script> 
+        <script src="js/preload.js"></script>
         <script src="js/vendor/jquery.countdown.js"></script>
         <script src="js/vendor/ion.sound.min.js"></script>
-        <script src="js/preload.js"></script>
 
         <!--<script type="text/javascript">
             $(document).ready(function(){
@@ -282,8 +282,7 @@
                 <div class="hit-targets location-trashcan1" name="trashcan1-target"></div>
                 <div class="hit-targets location-trashcan2" name="trashcan2-target"></div>
                 <div class="hit-targets location-manhole" name="manhole-target"></div>
-                <div class="hit-targets location-cardboardBox" name="cardboardBox-target"></div>
-
+                <div class="hit-targets location-cardboardBox" name="manhole-target"></div>
 
                 <div class="location-dumpster img hit-type off"></div>
                 <div class="location-trashcan1 img hit-type off"></div>
@@ -360,7 +359,7 @@
         <script src="js/plugins.js"></script>
         <script src="js/counter.js"></script>
         <script src="js/sounds.js"></script>
-        <script src="js/game.js"></script>
+        <!--<script src="js/game.js"></script>-->
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
