--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="instruction-points">
                     <div class="col-4">
                         <div class="img-wrapper">
-                            <img draggable="false" src="images/screens/howToPlay_largeDog-small.png">
+                            <img draggable="false" src="images/howToPlay_largeDog-small.png">
                         </div>
                         <div>
                             LARGE DOGS
@@ -128,7 +128,7 @@
                     </div>
                     <div class="col-4">
                         <div class="img-wrapper">
-                            <img draggable="false" src="images/screens/howToPlay_smallDog-small.png">
+                            <img draggable="false" src="images/howToPlay_smallDog-small.png">
                         </div>
                         <div>
                             SMALL DOGS
@@ -139,7 +139,7 @@
                     </div>
                     <div class="col-4">
                         <div class="img-wrapper">
-                            <img draggable="false" src="images/screens/howToPlay_cat-small.png">
+                            <img draggable="false" src="images/howToPlay_cat-small.png">
                         </div>
                         <div>
                             CATS
@@ -181,7 +181,7 @@
                 <div class="instruction-points">
                     <div class="col-4">
                         <div class="img-wrapper">
-                            <img draggable="false" src="images/screens/howToPlay_largeDog-small.png">
+                            <img draggable="false" src="images/howToPlay_largeDog-small.png">
                         </div>
                         <div>
                             LARGE DOGS
@@ -192,7 +192,7 @@
                     </div>
                     <div class="col-4">
                         <div class="img-wrapper">
-                            <img draggable="false" src="images/screens/howToPlay_smallDog-small.png">
+                            <img draggable="false" src="images/howToPlay_smallDog-small.png">
                         </div>
                         <div>
                             SMALL DOGS
@@ -203,7 +203,7 @@
                     </div>
                     <div class="col-4">
                         <div class="img-wrapper">
-                            <img draggable="false" src="images/screens/howToPlay_cat-small.png">
+                            <img draggable="false" src="images/howToPlay_cat-small.png">
                         </div>
                         <div>
                             CATS
@@ -361,7 +361,7 @@
         <script src="js/plugins.js"></script>
         <script src="js/counter.js"></script>
         <script src="js/sounds.js"></script>
-        <!--<script src="js/game.js"></script>-->
+        <script src="js/game.js"></script>
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
