--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <script type="text/javascript" src="js/vendor/jquery.plugin.js"></script> 
         <script type="text/javascript" src="js/vendor/preloadjs-0.4.1.min.js"></script> 
-        <script src="js/preload.js"></script>
+        
         <script src="js/vendor/jquery.countdown.js"></script>
         <script src="js/vendor/ion.sound.min.js"></script>
+
 
         <!--<script type="text/javascript">
             $(document).ready(function(){
@@ -62,7 +63,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <script>
+        <!--<script>
           window.fbAsyncInit = function() {
             FB.init({
               appId      : '1731180437107585',
@@ -78,7 +79,7 @@
              js.src = "https://connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.0";
              fjs.parentNode.insertBefore(js, fjs);
            }(document, 'script', 'facebook-jssdk'));
-        </script>
+        </script>-->
 
         <div id="main-frame">
             <!-- MENU SCREEN -->
@@ -86,12 +87,12 @@
             <!-- Add an 'active' class to show -->
             <section class="frame loading-screen active">
                <div class="headline">
-                    LOADING ...
+                    Loading ...
                 </div> 
             </section>
             <section class="frame start-screen">
                <div class="headline-pic">
-                    <img draggable="false" src="images/screens/titlepage-txt-whackem_all.png">
+                    <img draggable="false" src="images/titlepage-txt-whackem_all.png">
                 </div> 
                 <div class="subheadline">
                     Broward County kills 20,000 adoptable pets every year. <b>Can you kill more?</b>
@@ -157,7 +158,7 @@
             <!-- Add an 'active' class to show -->
             <section class="frame kill-commissioner">
                 <div class="headline-pic">
-                    <img draggable="false" src="images/screens/coin-mdk.png">
+                    <img draggable="false" src="images/coin-mdk.png">
                 </div>
                 <div class="subheadline">
                     COMMISSIONER KILL BOOST
@@ -221,7 +222,7 @@
             <!-- Add an 'active' class to show -->
             <section class="frame save-commissioner">
                 <div class="headline-pic">
-                    <img draggable="false" src="images/screens/coin-mdk.png">
+                    <img draggable="false" src="images/coin-mdk.png">
                 </div>
                 <div class="subheadline">
                     COMMISSIONER BOOST
@@ -356,13 +357,14 @@
 
         <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
         <!--<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>-->
+        
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
 
+        <script src="js/preload.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/counter.js"></script>
         <script src="js/sounds.js"></script>
         <script src="js/game.js"></script>
-
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
         <script>
